--- a/header.html
+++ b/header.html
@@ -1,38 +1,10 @@
-<!DOCTYPE html>
-<html lang="es">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio - Veronica Sanchez Justicia</title>
-        <script src="https://cdn.tailwindcss.com"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Marcellus&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
-        <style>
-            body {
-            font-family: 'Quicksand', sans-serif;
-            background-color: #FFF8F0;
-            color: #5C4742;
-            }
-            h1, h2, h3 {
-            font-family: 'Marcellus', serif;
-            }
-            .bg-primary { background-color: #C97C5D; }
-            .text-primary { color: #C97C5D; }
-            .bg-secondary { background-color: #A6BBA6; }
-            .text-secondary { color: #A6BBA6; }
-            .bg-accent { background-color: #E3B5A4; }
-        </style>
-    </head>
-    <body>
-        <!-- HEADER -->
-        <header class="sticky top-0 bg-white shadow-md z-50">
-            <div class="container max-w flex justify-between items-center p-4">
-                <h1 class="text-2xl font-bold text-primary">Veronica Sanchez Justicia</h1>
-                <nav class="space-x-4">
-                    <a href="#about" class="hover:text-primary">About Me</a>
-                    <a href="#projects" class="hover:text-primary">Proyects</a>
-                    <a href="#contact" class="hover:text-primary">Contact</a>
-                </nav>
-            </div>
-        </header>
-    </body>
-</html>
+<header class="sticky top-0 bg-white shadow-md z-50">
+  <div class="container mx-auto flex justify-between items-center p-4">
+    <h1 class="text-2xl font-bold text-primary">[Tu Nombre]</h1>
+    <nav class="space-x-4">
+      <a href="#about" class="hover:text-primary">Sobre mí</a>
+      <a href="#projects" class="hover:text-primary">Proyectos</a>
+      <a href="#contact" class="hover:text-primary">Contacto</a>
+    </nav>
+  </div>
+</header>
