--- a/index.html
+++ b/index.html
@@ -25,16 +25,7 @@
 <body>
 
   <!-- HEADER -->
-  <header class="sticky top-0 bg-white shadow-md z-50">
-    <div class="container max-w flex justify-between items-center p-4">
-      <h1 class="text-2xl font-bold text-primary">Veronica Sanchez Justicia</h1>
-      <nav class="space-x-4">
-        <a href="#about" class="hover:text-primary">About Me</a>
-        <a href="#projects" class="hover:text-primary">Proyects</a>
-        <a href="#contact" class="hover:text-primary">Contact</a>
-      </nav>
-    </div>
-  </header>
+  <div id="header"></div>
 
   <!-- HERO -->
   <section class="text-center py-20 bg-primary text-white">
@@ -101,6 +92,15 @@
   <footer class="text-center py-4 bg-primary text-white">
     <p>&copy; 2025 Veronica Sanchez Justicia - All rights reserved.</p>
   </footer>
-
+  
+ <!-- JS PARA INCLUIR HEADER Y FOOTER -->
+  <script>
+    async function loadHTML(id, file) {
+      const res = await fetch(file);
+      document.getElementById(id).innerHTML = await res.text();
+    }
+    loadHTML("header", "header.html");
+    loadHTML("footer", "footer.html");
+  </script>
 </body>
 </html>
