--- a/header.html
+++ b/header.html
@@ -1,10 +1,11 @@
+<!-- HEADER -->
 <header class="sticky top-0 bg-white shadow-md z-50">
-  <div class="container mx-auto flex justify-between items-center p-4">
-    <h1 class="text-2xl font-bold text-primary">[Tu Nombre]</h1>
-    <nav class="space-x-4">
-      <a href="#about" class="hover:text-primary">Sobre mí</a>
-      <a href="#projects" class="hover:text-primary">Proyectos</a>
-      <a href="#contact" class="hover:text-primary">Contacto</a>
-    </nav>
-  </div>
+    <div class="container max-w flex justify-between items-center p-4">
+        <h1 class="text-2xl font-bold text-primary">Veronica Sanchez Justicia</h1>
+        <nav class="space-x-4">
+            <a href="#about" class="hover:text-primary">About Me</a>
+            <a href="#projects" class="hover:text-primary">Proyects</a>
+            <a href="#contact" class="hover:text-primary">Contact</a>
+        </nav>
+    </div>
 </header>
