dinamic footer and header files correction

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
       <button class="bg-primary text-white w-full py-2 rounded font-semibold hover:bg-accent transition">Submit</button>
     </form>
   </section>
+  
+  <!-- FOOTER -->
+  <div id="footer"></div>
 
  <!-- JS PARA INCLUIR HEADER Y FOOTER -->
   <script>
