--- a/header.html
+++ b/header.html
@@ -4,7 +4,8 @@
         <h1 class="text-2xl font-bold text-primary">Veronica Sanchez Justicia</h1>
         <nav class="space-x-4">
             <a href="#about" class="hover:text-primary">About Me</a>
-            <a href="#projects" class="hover:text-primary">Proyects</a>
+            <a href="#experience" class="hover:text-primary">Experience</a>
+            <!--<a href="#projects" class="hover:text-primary">Proyects</a>-->
             <a href="#contact" class="hover:text-primary">Contact</a>
         </nav>
     </div>
