dinamic experience loading

--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
         <nav class="space-x-4">
             <a href="#about" class="hover:text-primary">About Me</a>
             <a href="#experience" class="hover:text-primary">Experience</a>
-            <!--<a href="#projects" class="hover:text-primary">Proyects</a>-->
+            <a href="#education" class="hover:text-primary">Education</a>
             <a href="#contact" class="hover:text-primary">Contact</a>
         </nav>
     </div>
