--- a/index.html
+++ b/index.html
@@ -53,30 +53,6 @@
     </p>
   </section>
 
-  <!-- PROYECTOS -->
-   <!--<section id="projects" class="py-16 bg-secondary px-4">
-    <div class="container mx-auto">
-      <h3 class="text-3xl font-bold text-center mb-10 text-white">My Proyects</h3>
-      <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-white rounded-lg shadow hover:shadow-xl transition p-4">
-          <img src="https://via.placeholder.com/400x200" class="rounded mb-4" alt="Proyecto 1">
-          <h4 class="font-bold text-lg text-primary mb-2">Proyecto 1</h4>
-          <p class="text-sm">Breve descripción del proyecto.</p>
-        </div>
-        <div class="bg-white rounded-lg shadow hover:shadow-xl transition p-4">
-          <img src="https://via.placeholder.com/400x200" class="rounded mb-4" alt="Proyecto 2">
-          <h4 class="font-bold text-lg text-primary mb-2">Proyecto 2</h4>
-          <p class="text-sm">Breve descripción del proyecto.</p>
-        </div>
-        <div class="bg-white rounded-lg shadow hover:shadow-xl transition p-4">
-          <img src="https://via.placeholder.com/400x200" class="rounded mb-4" alt="Proyecto 3">
-          <h4 class="font-bold text-lg text-primary mb-2">Proyecto 3</h4>
-          <p class="text-sm">Breve descripción del proyecto.</p>
-        </div>
-      </div>
-    </div>
-  </section>-->
-
   <!-- EXPERIENCE -->
   <section id="experience" class="py-16 bg-secondary px-4">
     <div class="container mx-auto">
@@ -170,20 +146,9 @@
     </div>
   </section>
 
-<!-- EDUCATION -->
-  <section id="contact" class="container mx-auto py-16 px-4">
-    <h3 class="text-3xl font-bold text-center mb-8 text-primary">Education</h3>
-    <p class="text-center max-w-2xl mx-auto text-lg leading-relaxed">
-      Higher Vocational Training - Multiplatform Application Development
-    </p>
-    <p class="text-center max-w-2xl mx-auto text-lg leading-relaxed">
-      IES Francisco Ayala & IES Padre Suárez Granada, Spain.
-    </p>
-    <p class="text-center max-w-2xl mx-auto text-lg leading-relaxed">
-      Granada, Spain.
-    </p>
-  </section>
 
+
+  <div id="education"></div>
   <div id="contact" class="bg-secondary"></div>
   <div id="footer"></div>
 
@@ -195,6 +160,7 @@
     }
     loadHTML("header", "header.html");
     
+    loadHTML("education", "education.html");
     loadHTML("contact", "contact.html");
     loadHTML("footer", "footer.html");
   </script>
