--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,6 @@
     <input type="text" placeholder="Your name" class="w-full p-3 mb-4 border rounded" required>
     <input type="email" placeholder="Your email" class="w-full p-3 mb-4 border rounded" required>
     <textarea placeholder="Your message" rows="4" class="w-full p-3 mb-4 border rounded" required></textarea>
-    <button class="bg-primary text-white w-full py-2 rounded font-semibold hover:bg-accent transition">Submit</button>
+    <button class="bg-secondary text-white w-full py-2 rounded font-semibold hover:bg-secondary transition">Submit</button>
 </form>
 </section>
