--- a/skills.html
+++ b/skills.html
@@ -1,4 +1,4 @@
-<section id="skills" class="py-16 bg-primary">
+<section id="skills" class="py-16">
     <div class="max-w-6xl mx-auto px-6">
       <h3 class="text-3xl font-bold text-center mb-10 text-primary">My Skills</h3>
       <!-- Java Ecosystem -->
