--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!-- CONTACT -->
-<section id="contact" class="container mx-auto py-16 px-4">
-<h3 class="text-3xl font-bold text-center mb-8 text-primary">Contact</h3>
+<section id="contact" class="container mx-auto py-16 px-4 bg-secondary">
+<h3 class="text-3xl font-bold text-center mb-8 text-white">Contact</h3>
 <form class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow">
     <input type="text" placeholder="Your name" class="w-full p-3 mb-4 border rounded" required>
     <input type="email" placeholder="Your email" class="w-full p-3 mb-4 border rounded" required>
