--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!-- CONTACT -->
-<section id="contact" class="container mx-auto py-16 px-4 bg-secondary">
-<h3 class="text-3xl font-bold text-center mb-8 text-white">Contact</h3>
-<form class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow">
-    <input type="text" placeholder="Your name" class="w-full p-3 mb-4 border rounded" required>
-    <input type="email" placeholder="Your email" class="w-full p-3 mb-4 border rounded" required>
-    <textarea placeholder="Your message" rows="4" class="w-full p-3 mb-4 border rounded" required></textarea>
-    <button class="bg-secondary text-white w-full py-2 rounded font-semibold hover:bg-secondary transition">Submit</button>
-</form>
-</section>
+  <section id="contact" class="container mx-auto py-16 px-4">
+    <h3 class="text-3xl font-bold text-center mb-8 text-primary">Contact</h3>
+    <form class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow">
+      <input type="text" placeholder="Your name" class="w-full p-3 mb-4 border rounded" required>
+      <input type="email" placeholder="Your email" class="w-full p-3 mb-4 border rounded" required>
+      <textarea placeholder="Your message" rows="4" class="w-full p-3 mb-4 border rounded" required></textarea>
+      <button class="bg-primary text-white w-full py-2 rounded font-semibold hover:bg-accent transition">Submit</button>
+    </form>
+  </section>
