--- a/education.html
+++ b/education.html
@@ -1,6 +1,6 @@
 <!-- EDUCATION -->
-<section id="education" class="container mx-auto py-16 px-4">
-<h3 class="text-3xl font-bold text-center mb-8 text-primary">Education</h3>
+<section id="education" class="container mx-auto py-16 px-4 bg-secondary">
+<h3 class="text-3xl font-bold text-center mb-8 text-white">Education</h3>
 <p class="text-center max-w-2xl mx-auto text-lg leading-relaxed">
     Higher Vocational Training - Multiplatform Application Development
 </p>
