--- a/skills.html
+++ b/skills.html
@@ -17,6 +17,8 @@
           <li>Maven</li>
           <li>Sockets</li>
           <li>jUnit</li>
+          <li>Swing</li>
+          <li>iReport</li>
           <li>JDK (7, 8, 11, 12, 23, 24)</li>
         </ul>
       </div>
@@ -34,69 +36,68 @@
         </ul>
       </div>
 
-      <!-- Programming Languages -->
+      <!-- Databases -->
       <div class="mb-6">
-        <h3 class="text-2xl font-semibold text-primary mb-3">Programming Languages</h3>
-        <ul class="flex flex-wrap gap-8">
-          <li>Python</li>
-          <li>PHP</li>
-          <li>Visual Basic</li>
-          <li>HTML</li>
-          <li>CSS</li>
+        <h3 class="text-2xl font-semibold text-primary mb-3">Databases</h3>
+        <ul class="flex flex-wrap gap-8 ">
+          <li>Oracle SQL</li>
+          <li>PLSQL</li>
+          <li>MySQL</li>
+          <li>PostgreSQL</li>
+          <li>H2</li>
           <li>JSON</li>
           <li>XML</li>
         </ul>
       </div>
 
-      <!-- Frameworks & Libraries -->
+      <!-- BackEnd -->
       <div class="mb-6">
-        <h3 class="text-2xl font-semibold text-primary mb-3">Frameworks & Libraries</h3>
-        <ul class="flex flex-wrap gap-8 ">
-          <li>ReactJS</li>
-          <li>Angular</li>
-          <li>Django Rest Framework</li>
-          <li>Microservices</li>
-        </ul>
-      </div>
-
-      <!-- Databases -->
-      <div class="mb-6">
-        <h3 class="text-2xl font-semibold text-primary mb-3">Databases</h3>
-        <ul class="flex flex-wrap gap-8 ">
-          <li>MySQL</li>
-          <li>PostgreSQL</li>
-          <li>Oracle SQL</li>
-          <li>PLSQL</li>
-          <li>H2</li>
-        </ul>
-      </div>
-
-      <!-- Development Tools -->
-      <div class="mb-6">
-        <h3 class="text-2xl font-semibold text-primary mb-3">Development Tools</h3>
+        <h3 class="text-2xl font-semibold text-primary mb-3">BackEnd</h3>
         <ul class="flex flex-wrap gap-8">
-          <li>Eclipse</li>
-          <li>NetBeans</li>
-          <li>Visual Studio</li>
-          <li>Android Studio</li>
-          <li>iReport</li>
+          <li>PHP</li>
+          <li>Django</li>
+          <li>Rest Framework</li>
+          <li>Python</li>
+        </ul>
+      </div>
+
+      <!-- FrontEnd -->
+      <div class="mb-6">
+        <h3 class="text-2xl font-semibold text-primary mb-3">FrontEnd</h3>
+        <ul class="flex flex-wrap gap-8">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Angular</li>
+          <li>ReactJS</li>
+          <li>NodeJS</li>
           <li>Vite</li>
           <li>Figma</li>
           <li>Gimp</li>
         </ul>
       </div>
 
+      <!-- Full Stack -->
+      <div class="mb-6">
+        <h3 class="text-2xl font-semibold text-primary mb-3">Full Stack</h3>
+        <ul class="flex flex-wrap gap-8">
+          <li>Drupal</li>
+          <li>WordPress</li>
+          <li>JavaScript</li>
+        </ul>
+      </div>
+      
       <!-- Infrastructure & DevOps -->
       <div class="mb-6">
         <h3 class="text-2xl font-semibold text-primary mb-3">Infrastructure & DevOps</h3>
         <ul class="flex flex-wrap gap-8">
           <li>Tomcat</li>
           <li>Docker</li>
-          <li>NodeJS</li>
           <li>Unix</li>
           <li>Linux</li>
           <li>Ubuntu</li>
+          <li>Shell Bash Scripting</li>
           <li>Windows Server</li>
+          <li>WSL</li>
           <li>Microsoft Azure</li>
         </ul>
       </div>
@@ -111,27 +112,14 @@
         </ul>
       </div>
 
-      <!-- Methodologies & Best Practices -->
+      <!-- IDEs -->
       <div class="mb-6">
-        <h3 class="text-2xl font-semibold text-primary mb-3">Methodologies & Best Practices</h3>
+        <h3 class="text-2xl font-semibold text-primary mb-3">IDEs</h3>
         <ul class="flex flex-wrap gap-8">
-          <li>Agile</li>
-          <li>Scrum</li>
-          <li>Test-Driven Development (TDD)</li>
-          <li>Clean Code</li>
-          <li>Design Patterns</li>
-          <li>UML Diagrams</li>
-          <li>Customer-Oriented Approach</li>
-        </ul>
-      </div>
-
-      <!-- CMS & Platforms -->
-      <div class="mb-6">
-        <h3 class="text-2xl font-semibold text-primary mb-3">CMS & Platforms</h3>
-        <ul class="flex flex-wrap gap-8">
-          <li>Drupal</li>
-          <li>WordPress</li>
-          <li>Odoo 14</li>
+          <li>Visual Studio</li>
+          <li>Android Studio</li>
+          <li>Netbeans</li>
+          <li>Eclipse</li>
         </ul>
       </div>
 
@@ -146,12 +134,28 @@
         </ul>
       </div>
 
+      <!-- Methodologies & Best Practices -->
+      <div class="mb-6">
+        <h3 class="text-2xl font-semibold text-primary mb-3">Methodologies & Best Practices</h3>
+        <ul class="flex flex-wrap gap-8">
+          <li>Agile</li>  
+          <li>Scrum</li>
+          <li>Test-Driven Development (TDD)</li>
+          <li>Clean Code</li>
+          <li>Design Patterns</li>
+          <li>UML Diagrams</li>
+          <li>Customer-Oriented Approach</li>
+          <li>Microservices</li>
+        </ul>
+      </div>
+
       <!-- Other Skills -->
       <div class="mb-6">
         <h3 class="text-2xl font-semibold text-primary mb-3">Other Skills</h3>
         <ul class="flex flex-wrap gap-8">
-          <li>Shell Bash Scripting</li>
           <li>Office Tools</li>
+          <li>Odoo 14</li>
+          <li>Visual Basic</li>
         </ul>
       </div>
 
@@ -159,6 +163,7 @@
       <div>
         <h3 class="text-2xl font-semibold text-primary mb-3">Languages</h3>
         <ul class="flex flex-wrap gap-8">
+          <li>Spanish (Native)</li>
           <li>English (B2)</li>
           <li>German (Basic)</li>
         </ul>
