--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       <!-- Email -->
       <div class="flex flex-col items-center hover:text-red-600 transition">
         <i class="fas fa-envelope text-4xl lg:text-6xl text-red-500 mb-2"></i>
-        <a href="mailto:veronicasanchezjusticia2@gmail.com" class="font-medium">veronicasanchezjusticia2@gmail.com</a>
+        <a href="mailto:sanchezjcristina@gmail.com" class="font-medium">cristinasanchezjusticia2@gmail.com</a>
       </div>
 
       <!-- LinkedIn -->
@@ -25,13 +25,13 @@
       <!-- Portfolio -->
       <div class="flex flex-col items-center hover:text-purple-600 transition">
         <i class="fas fa-globe text-4xl lg:text-6xl text-purple-600 mb-2"></i>
-        <a href="https://veronicasj.github.io/Portfolio/" target="_blank" class="font-medium">Portfolio</a>
+        <a href="https://cristinasj.github.io/Portfolio/" target="_blank" class="font-medium">Portfolio</a>
       </div>
 
       <!-- GitHub -->
       <div class="flex flex-col items-center hover:text-gray-900 transition sm:col-span-2">
         <i class="fab fa-github text-4xl lg:text-6xl text-gray-800 mb-2"></i>
-        <a href="https://github.com/VeronicaSj" target="_blank" class="font-medium">GitHub</a>
+        <a href="https://github.com/cristinasj" target="_blank" class="font-medium">GitHub</a>
       </div>
     </div>
   </section>
