--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
 <!-- FOOTER -->
 <footer class="text-center py-4 bg-primary text-white">
-    <p>&copy; 2025 Veronica Sanchez Justicia - All rights reserved.</p>
+    <p>&copy; 2025 Cristina Sanchez Justicia - All rights reserved.</p>
 </footer>
