--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!-- HEADER -->
 <header class="sticky top-0 bg-white shadow-md z-50">
     <div class="container max-w flex justify-between items-center p-4">
-        <h1 class="text-2xl font-bold text-primary">Veronica Sanchez Justicia</h1>
+        <h1 class="text-2xl font-bold text-primary">Cristina Sanchez Justicia</h1>
         <nav class="space-x-4">
             <a href="#about" class="hover:text-primary">About Me</a>
             <a href="#experience" class="hover:text-primary">Experience</a>
