--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio - Veronica Sanchez Justicia</title>
+  <title>Portfolio - Cristina Sanchez Justicia</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Marcellus&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
   <!-- HERO -->
   <section class="text-center py-20 bg-primary text-white">
     <img src="images/selfie.png" alt="Tu foto" class="mx-auto w-64 rounded-full mb-6 border-4 border-white shadow-lg">
-    <h2 class="text-4xl font-bold mb-2">Veronica Sanchez Justicia</h2>
+    <h2 class="text-4xl font-bold mb-2">Cristina Sanchez Justicia</h2>
     <p class="text-lg mb-6">Full Stack Web Developer, Backend & Frontend | Systems Administrator</p>
     <a href="#experience" 
       class="bg-white text-primary px-6 py-2 rounded-full font-semibold shadow hover:bg-accent hover:text-white transition">
