--- a/about.html
+++ b/about.html
@@ -4,11 +4,6 @@
         About Me
     </h3>
     <p class="text-center max-w-2xl mx-auto text-lg leading-relaxed">
-        Full Stack Developer with experience in backend (Java, Python, Django 
-        REST, Spring Boot) and frontend (ReactJS, Angular, Drupal). Expert in 
-        infrastructure and DevOps (Docker, Linux, Azure), with knowledge of 
-        technical SEO and best practices such as Clean Code and TDD. Passionate
-        about creating scalable, efficient solutions that focus on user 
-        experience.
+        DevOps Engineer | Kubernetes, Azure and AWS Certified | Polyglot: English, German, French and Spanish 
     </p>
 </section>
