--- a/experience.html
+++ b/experience.html
@@ -16,10 +16,9 @@
             </li>
             <ul class="list-disc list-inside pl-5 space-y-1">
               <li class="text-sm">
-                BackEnd and SEO, https://www.psicologia.io/ with Drupal
               </li>
               <li class="text-sm">
-                Technologies: Drupal, PHP, Schema.org Metatag, MySQL, WSL, Docker
+                Technologies: 
               </li>
             </ul>
             <li class="text-sm">
@@ -27,64 +26,25 @@
             </li>
             <ul class="list-disc list-inside pl-5 space-y-1">
               <li class="text-sm">
-                Full Stack, Complete web for Diet Planning using AI
               </li>
               <li class="text-sm">
-                Tasks: Local Environment, Entity-Relationship, Wireframe, UI/UX, REST API
-                Technologies: Django REST Framework, Python, ReactJS, NodeJS,
-                MUI Material, Ollama, PostgreSQL, Docker, WSL, Draw.io
+                Tasks: 
+                Technologies: 
               </li>
               <li class="text-sm">
-                Technologies: Django REST Framework, Python, ReactJS, NodeJS,
-                MUI Material, Ollama, PostgreSQL, Docker, WSL, Draw.io
+                Technologies:
               </li>
             </ul>
           </ul>
         </div>
 
         <div class="bg-white rounded-lg shadow hover:shadow-xl transition p-4">
-          <img src="images/logoPythonman.jpeg" class="rounded mb-4" alt="PythonMan Logo">
-          <h4 class="font-bold text-lg text-primary mb-2">PythonMan, Granada</h4>
-          <p class="font-bold text-sm"> FullStack Developer Volunteering</p>
-          <p class="font-bold text-sm">February 2025 - March 2025</p>
-          <ul class="list-disc list-inside space-y-1">
-            <li class="text-sm">
-              Company's website Development.
-            </li>
-            <li class="text-sm">
-              Technologies: ReactJS, Django, NodeJS, Git Hub, Scrum
-            </li>
-          </ul>
         </div>
         
         <div class="bg-white rounded-lg shadow hover:shadow-xl transition p-4">
-          <img src="images/logoGesvision.jpg" class="rounded mb-4" alt="Gesvisión Logo">
-          <h4 class="font-bold text-lg text-primary mb-2">Gesvisión, Granada</h4>
-          <p class="font-bold text-sm"> Java Developer Internship</p>
-          <p class="font-bold text-sm">February 2025</p>
-          <ul class="list-disc list-inside space-y-1">
-            <li class="text-sm">
-              Technologies: JakartaEE, J2EE, JPA, Hibernate, JavaServer Faces, PrimeFaces
-            </li>
-          </ul>
         </div>
 
         <div class="bg-white rounded-lg shadow hover:shadow-xl transition p-4">
-          <img src="images/logoKyndryl.jpg" class="rounded mb-4" alt="Kyndryl Logo">
-          <h4 class="font-bold text-lg text-primary mb-2">Kyndryl, Granada</h4>
-          <p class="font-bold text-sm">Middleware Technician</p>
-          <p class="font-bold text-sm">December 2023 - June 2024</p>
-          <ul class="list-disc list-inside space-y-1">
-            <li class="text-sm">
-              Maintenance and review of J2EE infrastructure, Arqos, Documentum, and AS400
-            </li>
-            <li class="text-sm">
-              Resolution of incidents, requests, migrations, patching, and deployments
-            </li>
-            <li class="text-sm">
-              Technologies: Linux, Unix, Shell Bash Scripting, Tomcat, Dynatrace, Grafana, Azure
-            </li>
-          </ul>
         </div>
 
       </div>
